# rudpt_evaluation

./: .gitignore  CMakeLists.txt  LICENSE  dependencies.yaml  package.xml
eval_data/: .gitignore
eval_data/1,1_0_3/: stamped_groundtruth.txt
eval_data/1,2_0_0/: stamped_groundtruth.txt
eval_data/2,1_1_3/: stamped_groundtruth.txt
launch/: euroc_frontend_save_pose.launch  euroc_mono_imu_frontend_rudpt.launch  euroc_stereo_imu_frontend_rudpt.launch
launch/dso/: dso_euroc_mono.launch  dso_euroc_save_pose.launch
launch/lsd_slam/: lsd_slam_euroc_mono.launch  lsd_slam_euroc_save_pose.launch
launch/okvis/: okvis_euroc_save_pose.launch  okvis_euroc_stereo_imu.launch
launch/open_vins/: open_vins_euroc_mono_inertial.launch  open_vins_euroc_save_pose.launch
launch/orb_slam3/: orb_slam3_euroc_mono.launch  orb_slam3_euroc_save_pose.launch
launch/rovio/: rovio_euroc_mono_imu.launch  rovio_euroc_save_pose.launch
launch/svin/: svin_euroc_mono_imu.launch  svin_euroc_save_pose.launch
launch/svo/: svo_euroc_mono_imu_frontend.launch  svo_euroc_save_pose.launch
launch/vins/: vins_euroc_mono_imu.launch  vins_euroc_save_pose.launch  vins_euroc_stereo_imu.launch
param/dso/: pinhole_euroc_calib_RUD-PT.cfg
param/lsd_slam/: pinhole_euroc_calib_RUD-PT.cfg
param/okvis/: euroc_stereo_RUD-PT.yaml
param/orb_slam3/: euroc_mono_RUD-PT.yaml  euroc_mono_inertial_RUD-PT.yaml
param/rovio/: euroc_cam0_RUD-PT.yaml  euroc_cam1.yaml  rovio.info
param/svin/: euroc_mono_imu_RUD-PT.yaml
param/svo/: euroc_mono_imu_calib_RUD-PT.yaml
param/vins/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_mono_imu_RUD-PT.yaml  euroc_stereo_imu_RUD-PT.yaml
results/1,1_0_0/: stamped_groundtruth.txt  stamped_traj_estimate.txt
results/1,1_0_1/: stamped_groundtruth.txt
results/1,1_0_2/: stamped_groundtruth.txt
results/1,1_0_3/: stamped_groundtruth.txt
results/1,1_1_0/: stamped_groundtruth.txt
results/1,1_1_1/: stamped_groundtruth.txt
results/1,1_1_2/: stamped_groundtruth.txt
results/1,1_1_3/: stamped_groundtruth.txt
results/1,1_2_0/: stamped_groundtruth.txt
results/1,1_2_1/: stamped_groundtruth.txt
rudpt_evaluation/: CMakeLists.txt  README.md
rudpt_orb_slam3/: CMakeLists.txt  README.md  package.xml  setup.py
rudpt_orb_slam3/launch/: euroc_mono_inertial_rudpt.launch  euroc_mono_rudpt.launch  euroc_save_pose.launch  euroc_stereo_inertial_rudpt.launch
rudpt_orb_slam3/param/: euroc_mono_inertial_RUD-PT.yaml
rudpt_orb_slam3/results/1,1_2_1/: stamped_groundtruth.txt
rudpt_orb_slam3/results/1,2_1_3/: stamped_groundtruth.txt
rudpt_orb_slam3/results/1,3_2_0/: stamped_groundtruth.txt
rudpt_orb_slam3/results/2,1_0_1/: stamped_groundtruth.txt
rudpt_orb_slam3/results/2,2_1_1/: stamped_groundtruth.txt
rudpt_orb_slam3/scripts/: orb_slam3_pose_to_txt.py
rudpt_orb_slam3/scripts/bash/: compare_results.sh  run_orb_slam3.sh
rudpt_svo/: README.md  setup.py
scripts/: compare_results.sh  run.sh  set_eval_times.py
scripts/bash/: run_svo.sh  (+1 more)
(+212 files in other folders)
