<?xml version="1.0"?>
<package format="2">
  <name>rudpt_evaluation</name>
  <version>0.0.0</version>
  <description>rudpt_evaluation</description>

  <maintainer email="jbla20@student.aau.dk">Jakob Larsen</maintainer>
  <author>Jakob Larsen</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
